--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -70,7 +70,7 @@
 	display: block;
     width: 30px;
     height: 10px;
-    border-top: 2px solid #e9b947;
+    border-top: 2px solid #483d7b;
     filter: invert(1);
 	}
 
