--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,7 +402,7 @@ footer .footer_rightul li a {
     border: unset;
     border-radius: unset;
     box-shadow: unset;
-    padding: 0;
+    padding: 0 20px;
 }
 .why_choose_card ul li {
     margin-bottom: 15px;
